<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity" android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/AppHeader.Title"
            android:text="@string/main_activity_title"/>

        <View
            android:id="@+id/divisionLine1"
            style="@style/DivisionLine"
            android:layout_below="@id/title"/>

        <TableRow
            android:id="@+id/fb_reels_row"
            android:onClick="onClick"
            android:layout_below="@id/divisionLine1">
            <ImageView
                android:id="@+id/fb_reels_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/fb_reels" />
            <TextView
                android:id="@+id/fb_reels_text"
                style="@style/SectionTitle"
                android:layout_toRightOf="@id/fb_reels_image"
                android:text="@string/fb_reels" />
        </TableRow>

        <View
            android:id="@+id/divisionLine2"
            style="@style/DivisionLine"
            android:layout_below="@id/fb_reels_row"/>

        <TableRow
            android:id="@+id/ig_reels_row"
            android:onClick="onClick"
            android:layout_below="@id/divisionLine2">
            <ImageView
                android:id="@+id/ig_reels_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ig_reels" />
            <TextView
                android:id="@+id/ig_reels_text"
                style="@style/SectionTitle"
                android:layout_toRightOf="@id/ig_reels_image"
                android:text="@string/ig_reels" />
        </TableRow>

        <View
            android:id="@+id/divisionLine3"
            style="@style/DivisionLine"
            android:layout_below="@id/ig_reels_row"/>

    </TableLayout>
</ScrollView>
